nicknamer/server/src/web/snapshots/nicknamer_server__web__tests__can_render_call_to_action_for_authenticated_user.snap
---
source: nicknamer/server/src/web/mod.rs
expression: snapshot
---
test_context: call_to_action_authenticated
status: 200
headers: {}
html_body:
  - ""
  - "<div class=\"card w-full max-w-md shadow-2xl bg-base-100 mb-6\">"
  - "  <div class=\"card-body text-center\">"
  - "    <h1 class=\"card-title text-3xl font-bold mb-4\">Welcome, testuser!</h1>"
  - "    <p class=\"text-lg mb-4\">You can manage Nicknamer's settings from here.</p>"
  - "    <div class=\"card-actions justify-center\">"
  - "      <a href=\"/names\" class=\"btn btn-primary\">Manage Names</a>"
  - "    </div>"
  - "  </div>"
  - "</div>"
