nicknamer/server/src/web/snapshots/nicknamer_server__web__tests__can_render_call_to_action_for_unauthenticated_user.snap
---
source: nicknamer/server/src/web/mod.rs
expression: snapshot
---
test_context: call_to_action_unauthenticated
status: 200
headers: {}
html_body:
  - ""
  - "<div class=\"card w-full max-w-sm shadow-2xl bg-base-100\">"
  - "  <div class=\"card-body\">"
  - "    <h2 class=\"card-title text-2xl font-bold text-center\">"
  - "      Welcome to Nicknamer"
  - "    </h2>"
  - "    <p class=\"text-center mb-4\">Please log in to access the application.</p>"
  - "    <div class=\"card-actions justify-center\">"
  - "      <a href=\"/login\" class=\"btn btn-primary\">Login</a>"
  - "    </div>"
  - "  </div>"
  - "</div>"
