nicknamer/server/src/web/snapshots/nicknamer_server__web__tests__can_render_welcome_page.snap
---
source: nicknamer/server/src/web/mod.rs
expression: snapshot
---
test_context: welcome_page
status: 200
headers: {}
html_body:
  - "<!DOCTYPE html>"
  - "<html lang=\"en\">"
  - "  <head>"
  - "    <title>Nicknamer</title>"
  - "    <meta charset=\"UTF-8\" />"
  - "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />"
  - "<script"
  - "  src=\"https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js\""
  - "  crossorigin=\"anonymous\""
  - "></script>"
  - "<script"
  - "  src=\"https://cdn.jsdelivr.net/npm/htmx-ext-response-targets@2.0.2\""
  - "  crossorigin=\"anonymous\""
  - "></script>"
  - "<link"
  - "  href=\"https://cdn.jsdelivr.net/npm/daisyui@5\""
  - "  rel=\"stylesheet\""
  - "  type=\"text/css\""
  - />
  - "<script src=\"https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4\"></script>"
  - "  </head>"
  - "  <body class=\"bg-base-200\">"
  - "    <div class=\"container mx-auto p-4\">"
  - "      <div class=\"navbar bg-base-100 rounded-box shadow-lg\">"
  - "        <span class=\"mx-auto text-xl font-bold\">Nicknamer Admin Panel</span>"
  - "      </div>"
  - ""
  - "      <div"
  - "        class=\"min-h-screen bg-base-200 flex flex-col justify-center items-center\""
  - "        hx-get=\"/call-to-action\""
  - "        hx-trigger=\"load\""
  - "      >"
  - "        <!-- Call to action content will be loaded here -->"
  - "      </div>"
  - ""
  - "      <footer class=\"footer footer-center p-4 bg-base-300 text-base-content mt-6\">"
  - "  <aside>"
  - "    <p>"
  - "      Made with ❤️ by"
  - "      <a"
  - "        href=\"https://github.com/tacascer\""
  - "        target=\"_blank\""
  - "        rel=\"noopener noreferrer\""
  - "        >tacascer</a"
  - "      >"
  - "    </p>"
  - "  </aside>"
  - "</footer>"
  - "    </div>"
  - "  </body>"
  - "</html>"
